# test-ci

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/core/: mod.rs
